Set up CMake and project structure

--- a/aberration/CMakeLists.txt
+++ b/aberration/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
-project(aberration-core)
+project(Aberration)
 
-#set(SOURCES)
+add_compile_definitions(AB_BUILD_DLL)
 
-#add_executable(Sandbox src/Source.cpp)
-#arget_sources(Sandbox PUBLIC ${SOURCES})
-#arget_link_libraries(Sandbox ${GLFW_LIBRARIES} gl3w hypermath)
-#target_include_directories(Sandbox ${GLFW_I})
+set(SOURCES
+	src/ab.cpp
+	)
+
+add_library(Aberration SHARED ${SOURCES})
+target_link_libraries(Aberration hypermath)
