Basic X11 window creating example

--- a/aberration/CMakeLists.txt
+++ b/aberration/CMakeLists.txt
@@ -22,7 +22,7 @@ set(ABERRATION_SRC_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
 ##### LIBRARIES
 
 set(ABERRATION_LIB_WIN32 OpenGL32)
-set(ABERRATION_LIB_UNIX)
+set(ABERRATION_LIB_UNIX X11 GL)
 
 ##### SOURCES
 
