--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ compiler:
   - clang
 addons:
   apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - cmake
-      - clang
-      - libX11-dev
+#    sources:
+#     - ubuntu-toolchain-r-test
+#  packages:
+#   - cmake
+#  - clang
+# - libX11-dev
 script:
   # Link gcc-6 and g++-6 to their standard commands
   - ln -s /usr/bin/gcc-6 /usr/local/bin/clang
