--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ addons:
     sources:
      - ubuntu-toolchain-r-test
   packages:
-   - cmake
-  - clang
+ #  - cmake
+ # - clang
 # - libX11-dev
 script:
   # Link gcc-6 and g++-6 to their standard commands
-  - ln -s /usr/bin/gcc-6 /usr/local/bin/clang
-  - ln -s /usr/bin/g++-6 /usr/local/bin/clang++
+  - ln -s /usr/bin/clang /usr/local/bin/clang
+  - ln -s /usr/bin/clang++ /usr/local/bin/clang++
   # Export CC and CXX to tell cmake which compiler to use
   - export CC=/usr/bin/clang
   - export CXX=/usr/bin/clang++
