--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,17 @@ addons:
     sources:
      - ubuntu-toolchain-r-test
   packages:
+  - libx11-dev
  #  - cmake
  # - clang
 # - libX11-dev
 script:
   # Link gcc-6 and g++-6 to their standard commands
-  - sudo ln -s /usr/bin/clang /usr/local/bin/clang
-  - sudo ln -s /usr/bin/clang++ /usr/local/bin/clang++
+ # - sudo ln -s /usr/bin/clang /usr/local/bin/clang
+ # - sudo ln -s /usr/bin/clang++ /usr/local/bin/clang++
   # Export CC and CXX to tell cmake which compiler to use
-  - export CC=/usr/bin/clang
-  - export CXX=/usr/bin/clang++
+ # - export CC=/usr/bin/clang
+ # - export CXX=/usr/bin/clang++
   # Check versions of gcc, g++ and cmake
   - gcc -v && g++ -v && cmake --version
   # Run your build commands next
