--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ addons:
   apt:
     sources:
      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.6
   packages:
   - libx11-dev
+    - clang-3.6
  #  - cmake
  # - clang
 # - libX11-dev
@@ -23,4 +25,4 @@ script:
   # Check versions of gcc, g++ and cmake
   - gcc -v && g++ -v && cmake --version
   # Run your build commands next
-  - sh clang_build_linux.sh Debug
+  - sh clang_build_linux.sh Debug          
