--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -4,8 +4,10 @@ project(Sandbox)
 
 set(SOURCES
 	src/Sandbox.cpp
+	${CMAKE_SOURCE_DIR}/hypermath/hypermath.h
 	)
 
 add_executable(Sandbox src/Sandbox.cpp)
 target_sources(Sandbox PUBLIC ${SOURCES})
 target_link_libraries(Sandbox Aberration)
+target_include_directories(Sandbox PRIVATE ${CMAKE_SOURCE_DIR}/hypermath)
