Update appveyor.yml #1

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,5 +4,7 @@ configuration:
 - Release
 - Distrib
 platform: Windows
+before_build:
+  - cmd: call tools\premake\premake5.exe vs2017
 build:
   project: Aberration.sln
