--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,6 @@ configuration:
 - Distrib
 platform: Windows
 before_build:
-  - cmd: call tools\premake\premake5.exe vs2017
+  - cmd: call project\premake\premake5.exe vs2017
 build:
   project: Aberration.sln
