--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,5 @@
 version: 0.1.{build}
-image:
-- Visual Studio 2017
-configuration:
-- Debug
-- Release
-- Distrib
 platform: Windows
-before_build:
+build_script:
    - cmd: call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
    - cmd: project\build.bat
